--- a/src/Components/Auth/AuthPage.module.css
+++ b/src/Components/Auth/AuthPage.module.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   gap: 5rem;
   height: 100dvh;
-  background-color: #f0f2f5;
+  background-color: lavender;
   padding: 20px;
   overflow: hidden;
 }
@@ -43,7 +43,6 @@
   position: absolute;
   left: 0rem;
   top: -2.8rem;
-  background-color: #f0f2f5;
   margin-bottom: 2rem;
   z-index: 1;
 }
@@ -66,6 +65,6 @@
 
 .active {
   font-weight: bold;
-  background-color: #007bff;
+  background-color: royalblue;
   color: white;
 }
