--- a/src/Components/Layout/OptionsBar.module.css
+++ b/src/Components/Layout/OptionsBar.module.css
@@ -1,7 +1,7 @@
 .options {
   display: flex;
   justify-content: space-evenly;
-  overflow: scroll;
+  overflow: auto;
   padding: 0.5rem;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
