improved code - issue in  add transaction at position

--- a/src/Components/Auth/Form.module.css
+++ b/src/Components/Auth/Form.module.css
@@ -28,3 +28,10 @@
 .button:hover {
   background-color: royalblue;
 }
+
+.button:disabled {
+  background-color: #ccc; /* Gray background */
+  color: #666; /* Gray text */
+  cursor: not-allowed; /* Change cursor to indicate it's not clickable */
+  opacity: 0.6;
+}
